# mecob_mar23

./: .env  .gitignore  Dockerfile  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  pyproject.toml  render.yaml  render.yml  requirements.txt  script_scrapping_cls.py
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
apps/authentication/: views.py
apps/home/: cob.py  config.py  existing_models.py  forms.py  models.py  new_models.py  sql_scripts.py  urls.py  views.py
apps/home/migrations/: 0001_initial.py  0002_alter_contratoparcela_options.py  0002_auto_20230208_1836.py  0002_cadcliente_calculo_repasse_credito_dado_debito_repasseretido_taxa.py  0002_calculo_repasse_banco.py  0003_alter_contratoparcela_table.py  0003_alter_perfil_options.py  0003_auto_20230211_1027.py  0003_calculo_repasse_repasse.py  0004_alter_cad_cliente_model_animal.py  0004_auto_20230313_1438.py  0004_taxa.py  0005_alter_cad_cliente_model_evento.py  0005_alter_cadcliente_vendedor.py  0005_auto_20230301_1832.py  0006_alter_cad_cliente_model_options.py  0006_alter_dado_contrato.py  0006_alter_taxa_cliente.py  0007_alter_dado_contrato.py  0007_auto_20230212_1940.py  0007_auto_20230301_1842.py  0008_auto_20230212_1948.py  0008_auto_20230317_1908.py  0008_debito_descricao.py  0009_alter_dado_contrato.py  0009_calculo_repasse.py  0009_credito_descricao.py  0010_alter_debito_table.py  0010_auto_20230213_1445.py  0010_dado_id_excel.py  0011_alter_calculo_repasse_deposito.py  0011_alter_dado_parcelas_contrato.py  0011_alter_debito_cliente.py  0012_auto_20230318_1523.py  (+32 more)
core/: settings.py
(+28 files in other folders)
