[tool.poetry]
name = "data-django"
version = "0.1.0"
description = ""
authors = ["Rip4568 <63131796+Rip4568@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "data_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
